--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -78,7 +78,7 @@ Vol. \theVOL, No. \theISSUE, \thePUBYEAR\hfill\thepage}
 
 \setcounter{page}{1}
 
-\LRH{A. Trindade et~al.}
+%\LRH{A. Trindade et~al.}
 
 \RRH{Multi-Core Model Checking and Maximum Satisfiability Applied to Hardware-Software Partitioning}
 
@@ -120,7 +120,7 @@ E-mail: \{nonono\}@nonono.com}
 %E-mail: prhsilva2012@gmail.com, lucascordeiro@ufam.edu.br}
 
 \begin{abstract}
-We present new alternative approaches to solve the hardware and software partitioning problem. First we use Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) in conjunction with a multi-core support using Open Multi-Processing to create four variants to solve the partitioning problem. In a nutshell, the multi-core SMT-based BMC approach allows initializing many verification instances based on the number of available processing cores. Each instance checks for a different optimum value until the optimization problem is satisfied. We implement our algorithms on top of the Efficient SMT-Based Context-Bounded Model Checker (ESBMC). Other approach integrate the maximum satisfiability solver $\nu$Z tool into ESBMC. $\nu$Z provides a portfolio of approaches for solving linear optimization problems over SMT formulas. We compare all our approaches to a state-of-the-art optimization tool (MATLAB). Experimental results show that there is no single optimization tool to solve all hardware-software partitioning benchmarks.
+We present new alternative approaches to solve the hardware and software (HW-SW) partitioning problem. First, we use Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) in conjunction with a multi-core support using Open Multi-Processing to create four variants to solve the partitioning problem. In a nutshell, the multi-core SMT-based BMC approach allows initializing many verification instances using different approaches based on the number of available processing cores. In particular, each instance checks for a different optimum value until the optimization problem is satisfied. We implement our algorithms on top of the Efficient SMT-Based Context-Bounded Model Checker (ESBMC). Additionally, we integrate the maximum satisfiability solver $\nu$Z tool into ESBMC, which provides a portfolio of approaches for solving linear optimization problems over SMT formulas. We compare all proposed approaches to a state-of-the-art optimization tool (MATLAB). Experimental results show that there is no single optimization tool to solve all HW-SW partitioning benchmarks, but ESBMC-$\nu$Z outperforms all parallel approaches proposed in this paper.
 \end{abstract}
 
 \KEYWORD{hardware-software co-design, hardware-software partitioning, optimization, model checking, multi-core, maximum satisfiability.}
@@ -141,13 +141,13 @@ no no no.\vs{9}}
 
 \section{Introduction}
 
-Nowadays, with the strong development of embedded systems, the design phase plays an important role. At early stages, the design is split into separated flows: hardware and software. The partitioning decision process, which deals with decisions upon which parts of the application have to be designed in hardware (HW) and which one in software (SW), must be supported by any well-structured methodology. If there is no methodology support, a number of issues, {\it e.g.}, design flow interruptions, redesigns, and undesired iterations may affect the overall development process, the quality, and the life-cycle of the final system.
+Nowadays, with the strong development of embedded systems, the design phase plays an important role. At early stages, the design is split into separated flows: hardware (HW) and software (SW). The partitioning decision process, which deals with decisions upon which parts of the application have to be designed in hardware and which one in software, must be supported by any well-structured methodology. If there is no methodology support, a number of issues, {\it e.g.}, design flow interruptions, redesigns, and undesired iterations may affect the overall development process, the quality, and the life-cycle of the final system.
 
-Starting at the 1990s, intensive research was performed in HW-SW partitioning, and several approaches proposed, as shown in~\cite{Arato2003} and~\cite{Mann2007}. In~\cite{Trindade2015} and~\cite{Trindade2016} was shown that it is possible to use Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT), implemented in a tool called Efficient SMT-Based Context-Bounded Model Checker (ESBMC) as defined in~\cite{Cordeiro2012}, in order to perform HW-SW partitioning in embedded systems. In~\cite{Trindade2016} the original ESBMC algorithm was corrected and the right algorithm caused a loss in terms of performance, so a multi-core sequential approach was introduced in order to bring the performance back and turn it similar, in some cases, to conventional optimization tools that are used to perform hardware-software partitioning.
+Starting at the $90$'s decade, intensive research was performed in HW-SW partitioning, and several approaches proposed, as shown in~\cite{Arato2003} and~\cite{Mann2007}. In~\cite{Trindade2015} and~\cite{Trindade2016} was shown that it is possible to use Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT), implemented in a tool called Efficient SMT-Based Context-Bounded Model Checker (ESBMC) as defined in~\cite{Cordeiro2012}, in order to perform HW-SW partitioning in embedded systems. In~\cite{Trindade2016}, the original ESBMC algorithm was improved in terms of performance, so a multi-core sequential approach was introduced, in order to speed up the performance and turn it similar, in some cases, to conventional optimization tools, which are used to perform HW-SW partitioning.
 
-The present work extends those studies since there is a substantial improvement in terms of the SMT-based verification methods, which has been extended and exhauted with a multi-core parallel- and binary-search approaches, as well as, the integration of the Maximum SMT (MaxSMT) solver $\nu$Z into ESBMC, which is a state-of-art optimization tool based on SMT as defined in ~\cite{Bjorner2015}.
+The present work thus extends those previous studies since there is a substantial improvement in terms of the SMT-based verification methods. In particular, we extend the work of~\cite{Trindade2015} and~\cite{Trindade2016} to exploit a multi-core parallel- and binary-search approaches, as well as, the integration of the Maximum SMT (MaxSMT) solver $\nu$Z into ESBMC, which is a state-of-art optimization tool based on SMT as defined in~\cite{Bjorner2015}.
 
-Here, we exploit the availability of multi-core processors and the tool OpenMP as defined in~\cite{Tang2009}; in particular, SMT-based verification methods are applied to the HW-SW partition problem in three different ways using a multi-core ESBMC approach with OpenMP: ESBMC-SS using a sequential-search (SS), ESBMC-PS using a parallel-search (PS), and ESBMC-PB using a binary-search (BS). Experimental results are compared to ILP (integral linear programming), GA (generic algorithms) in a multi-core version, and also to $\nu$Z, which supports only a single-core approach, according~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the optimization toolbox of Matlab, according~\cite{TheMathWorks2013}, while $\nu$Z is a built-in tool to the SMT solver Z3. All multi-core ESBMC approaches, together with $\nu$Z, are implemented with the ESBMC tool.
+We exploit the availability of multi-core processors and the tool OpenMP as defined in~\cite{Tang2009}; thus, we apply SMT-based verification methods to the HW-SW partition problem in three different ways using a multi-core ESBMC approach with OpenMP: ESBMC-SS using a sequential-search (SS), ESBMC-PS using a parallel-search (PS), and ESBMC-PB using a binary-search (BS). Experimental results are compared to ILP (integer linear programming), GA (generic algorithms) in a multi-core version, and also to $\nu$Z, which supports only a single-core approach, according to~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the optimization toolbox of Matlab, according to~\cite{TheMathWorks2013}, while $\nu$Z is a built-in tool to the SMT solver Z3. All multi-core ESBMC approaches, together with $\nu$Z, are implemented with the ESBMC tool.
 
 \subsection{Contributions} 
 
@@ -155,7 +155,9 @@ The main contribution of the present study is to describe and evaluate a compreh
 
 \subsection{Availability of Data and Tools}
 
-Our experiments are based on a set of publicly available benchmarks. All benchmarks, tools, and results of our evaluation are available on a supplementary web page\footnote{http://esbmc.org/}.
+Our experiments are based on a set of publicly available benchmarks. All benchmarks, tools, and results of our evaluation are available on a supplementary web page \texttt{http://esbmc.org/}.
+
+\subsection{Organization of this Work}
 
 This article is organized as follows: Section~\ref{background} gives a background on optimization techniques, $\nu$Z, ESBMC, and OpenMP tools. 
 Section~\ref{Mathematical-modeling} describes the informal and formal mathematical modeling. The SMT-based BMC method is presented in Section~\ref{Analysis-of-the-partitioning-problem-using-ESBMC}, and in particular, Section~\ref{Analysis-of-the-partitioning-problem-using-vZ} presents the partitioning model using $\nu$Z. In Section~\ref{Experimental-Evaluation}, we show the experimental results using several embedded systems applications. In Section~\ref{Related-Work}, we discuss the related work and we conclude and describe future work in Section~\ref{Conclusions}.
@@ -172,7 +174,7 @@ The HW-SW partitioning problem is typically represented as a set of constraints 
 \label{Optimization}
 %----------------------------------------------
 
-Optimization is the act of obtaining the best result ({\it i.e.}, the optimal solution) under given circumstances as defined in~\cite{Rao2009}. There is no single method available for efficiently solving all optimization problems, according~\cite{Rao2009}. The most well-known technique is linear programming, which is an method applicable for the solution of problems in which the objective function and the constraints appear as linear functions of the decision variables. A particular case of linear programming is ILP, in which the variables can assume just integer values. Eq.~\ref{linear-programming-problem} shows a typical linear programming problem, where $A$ and $b$ are vectors or matrixes that describe the constraints
+Optimization is the act of obtaining the best result ({\it i.e.}, the optimal solution) under given circumstances as defined in~\cite{Rao2009}. There is no single method available for efficiently solving all optimization problems, according to~\cite{Rao2009}. The most well-known technique is linear programming, which is an method applicable for the solution of problems in which the objective function and the constraints appear as linear functions of the decision variables. A particular case of linear programming is ILP, in which the variables can assume just integer values. Eq.~\ref{linear-programming-problem} shows a typical linear programming problem, where $A$ and $b$ are vectors or matrixes that describe the constraints
 
 \vspace{2 mm}
 \begin{equation}
@@ -186,14 +188,14 @@ Optimization is the act of obtaining the best result ({\it i.e.}, the optimal so
 \end{equation}
 
 \vspace{2 mm}
-In some cases, the time to find a solution using ILP is impractical. Even with the use of powerful computers, a problem can take hours before an optimal solution is reached. If the optimization problem is complex, some heuristics can be used to solve the same problem faster, according~\cite{Rao2009}, {\it e.g.}, those used in the GA. The only drawback is that the found solution may not be the global minimum or maximum. Alternatively, tools such as ESBMC and $\nu$Z can be used to solve optimization problems so that the global minimum or maximum solution is found. The following sections describe the main features of ESBMC and $\nu$Z tools.
+In some cases, the time to find a solution using ILP is impractical. Even with the use of powerful computers, a problem can take hours before an optimal solution is reached. If the optimization problem is complex, some heuristics can be used to solve the same problem faster, according to~\cite{Rao2009}, {\it e.g.}, those used in the GA. The only drawback is that the found solution may not be the global minimum or maximum. Alternatively, tools such as ESBMC and $\nu$Z can be used to solve optimization problems so that the global minimum or maximum solution is found. The following sections describe the main features of ESBMC and $\nu$Z tools.
 
 %----------------------------------------------
 \subsection{Bounded Model Checking with ESBMC}
 \label{Bounded-Model-Checking-with-ESBMC}
 %----------------------------------------------
 
-Among the recent model checking techniques, there is one that combines model checking with satisﬁability solving. This technique, known as bounded model checking (BMC), does a very fast exploration of the state space, and for some types of problems, it offers large performance improvements over previous approaches, as shown in~\cite{Biere2009}. In particular, BMC based on Boolean Satisfiability (SAT) has been introduced as a complementary technique to binary decision diagrams for alleviating the state explosion problem, according~\cite{Clarke2001}. 
+Among the recent model checking techniques, there is one that combines model checking with satisﬁability solving. This technique, known as bounded model checking (BMC), does a very fast exploration of the state space, and for some types of problems, it offers large performance improvements over previous approaches, as shown in~\cite{Biere2009}. In particular, BMC based on Boolean Satisfiability (SAT) has been introduced as a complementary technique to binary decision diagrams for alleviating the state explosion problem, according to~\cite{Clarke2001}. 
 
 The basic idea of BMC is to check the negation of a given property at a given depth: given a transition system $M$, a property $\phi$, and a bound $k$, BMC unrolls the system $k$ times and translates it into a verification condition (VC) $\psi$  such that $\psi$ is satisfiable if and only if $\phi$ has a counterexample of depth $k$ or less, as defined in~\cite{Biere2009}. To cope with increasing software complexity, SMT solvers can be used as back-ends for solving the generated VCs, as shown in~\cite{Cordeiro2012},~\cite{Armando2009},~\cite{Ganai2006}. 
 
@@ -205,7 +207,7 @@ In particular, there are two directives in ESBMC that can be used to guide it to
 \label{ESBMCArchitecture}
 %----------------------------------------------
 
-Fig.~\ref{ESBMC-Architecture} shows the current ESBMC architecture, which consists of the C/C$++$ parser, GOTO Program, GOTO Symex, and SMT solver, according~\cite{Ramalho2013}. In particular, ESBMC compiles C/C$++$ code into equivalent GOTO-programs ({\it i.e.}, control-flow graphs) using a gcc-compliant style. GOTO-programs can then be processed by the symbolic execution engine, called GOTO Symex, where two recursive functions compute the constraints ($C$) and properties ($P$); finally, it generates two sets of equations ({\it i.e.},\:$C \land \neg P$), which are checked for satisfiability by an SMT solver. 
+Fig.~\ref{ESBMC-Architecture} shows the current ESBMC architecture, which consists of the C/C$++$ parser, GOTO Program, GOTO Symex, and SMT solver, according to~\cite{Ramalho2013}. In particular, ESBMC compiles C/C$++$ code into equivalent GOTO-programs ({\it i.e.}, control-flow graphs) using a gcc-compliant style. GOTO-programs can then be processed by the symbolic execution engine, called GOTO Symex, where two recursive functions compute the constraints ($C$) and properties ($P$); finally, it generates two sets of equations ({\it i.e.},\:$C \land \neg P$), which are checked for satisfiability by an SMT solver. 
 
 The main factor for ESBMC to use only a single-core relies on its back-end ({\it i.e.}, SMT Solver). Currently, the SMT solvers supported by ESBMC are: Z3, as shown in~\cite{DeMoura2008}; Boolector, as shown in~\cite{Brummayer2009}; MathSAT, as shown in~\cite{Barrett2011}; CVC4, as shown in~\cite{Bozzano2005}; and Yices, as shown in~\cite{Dutertre2014}. Most of them do provide neither multi-threaded support nor a parallel version to solve the generated SMT equations.
 
@@ -388,7 +390,7 @@ In the ESBMC algorithm is not necessary to add slack variables, because the modu
 
 Typically, ESBMC verification runs are performed only in a single-core. If the processor provides $8$ processing cores, only one is used for the verification and the others remain idle. Thus, there is a significant unused hardware resource during this process. 
 
-To optimize the CPU resources utilization without modifying the underlying SMT solver, the Open Multi-Processing (OpenMP) library, according~\cite{Dagum1998}, is used in this present work as a front-end for ESBMC. Fig.~\ref{ESBMC-Multi-core} shows our first approach called ESBMC sequential-search ``ESBMC-SS''.
+To optimize the CPU resources utilization without modifying the underlying SMT solver, the Open Multi-Processing (OpenMP) library, according to~\cite{Dagum1998}, is used in this present work as a front-end for ESBMC. Fig.~\ref{ESBMC-Multi-core} shows our first approach called ESBMC sequential-search ``ESBMC-SS''.
 
 \begin{figure}[h]
 	\caption{ESBMC-SS approach.}
@@ -682,10 +684,9 @@ Another path followed in past initiatives and which has had more studies is the 
 
 Finally, there are approaches that mixes heuristics with exact solution tools. The idea is to use a heuristic to speed up some phase of an exact solution tool. It worth mentioning that the final solution is not necessarily an optimal global solution. Only the SMT-based verification is guaranteed to find the exact solution, but hybrid algorithms are faster when complexity rises.
 
-In terms of SMT-based verification, most related studies are restricted to present the model, its modification to programming languages ({\it e.g.}, C/C++ and Java), and the application to multi-thread algorithms or to embedded systems to check for program correctness. In~\cite{Ramalho2013} it presents a bounded model checker for C++ programs, which is an evolution of dealing with C programs, and~\cite{Cordeiro2012} uses ESBMC for embedded ANSI-C software. In~\cite{Trindade2015}, and~\cite{Trindade2016} it was proven that it is possible to use ESBMC to solve HW-SW partitioning in a single- and multi-core way but the first had performance issues that were correct by the second, which used only a sequential search to perform multi-core model checking. There are related studies focused on decreasing the verification time of model checkers by applying Swarm Verification, as shown in~\cite{Holzmann2011}, and modifications of internal search engines to add support for parallelism, as shown in~\cite{Holzmann2012}, but there is still the need for initiatives related to parallel SMT solver, according~\cite{Wintersteiger2009}. 
+In terms of SMT-based verification, most related studies are restricted to present the model, its modification to programming languages ({\it e.g.}, C/C++ and Java), and the application to multi-thread algorithms or to embedded systems to check for program correctness. In~\cite{Ramalho2013} it presents a bounded model checker for C++ programs, which is an evolution of dealing with C programs, and~\cite{Cordeiro2012} uses ESBMC for embedded ANSI-C software. In~\cite{Trindade2015}, and~\cite{Trindade2016} it was proven that it is possible to use ESBMC to solve HW-SW partitioning in a single- and multi-core way, but the former has performance issues that were improved by the latter, which used only a sequential search to perform multi-core model checking. There are related studies focused on decreasing the verification time of model checkers by applying Swarm Verification, as shown in~\cite{Holzmann2011}, and modifications of internal search engines to add support for parallelism, as shown in~\cite{Holzmann2012}, but there is still the need for initiatives related to parallel SMT solver, according to~\cite{Wintersteiger2009}. 
 
-Recently, the SMT solver Z3 has been extended to pose and solve optimization problems modulo theories, as shown in~\cite{Bjorner2015}. In particular, 
-$\nu$Z tool offers substantial performance improvement in optimization problems, according~\cite{Bjorner2014} and ~\cite{Bjorner2015}. As an application example, \cite{Pavlinovic2015} propose an approach which considers all possible compiler error sources for statically typed functional programming languages and reports the most useful one subject to some usefulness criterion. The authors formulate this approach as an optimization problem related to SMT and use $\nu$Z to compute an optimal error source in a given ill-typed program. The approach described by \cite{Pavlinovic2015}, which uses MaxSMT solver $\nu$Z, shows a significant performance improvement if compared to previous SMT encodings and localization algorithms.
+Recently, the SMT solver Z3 has been extended to pose and solve optimization problems modulo theories, as shown in~\cite{Bjorner2015}. In particular, $\nu$Z tool offers substantial performance improvement in optimization problems, according to~\cite{Bjorner2014} and~\cite{Bjorner2015}. As an application example, \cite{Pavlinovic2015} propose an approach which considers all possible compiler error sources for statically typed functional programming languages and reports the most useful one subject to some usefulness criterion. The authors formulate this approach as an optimization problem related to SMT and use $\nu$Z to compute an optimal error source in a given ill-typed program. The approach described by \cite{Pavlinovic2015}, which uses MaxSMT solver $\nu$Z, shows a significant performance improvement if compared to previous SMT encodings and localization algorithms.
 
 The problem addressed in this present paper uses a single objective function for minimization. In~\cite{Patrick2015}, OptiMathSAT and $\nu$Z are compared for software optimization problems. OptiMathSAT, using multiple objective functions, works better than $\nu$Z; however, for problems with a single objective function, the performance of $\nu$Z is better than OptiMathSAT.
 
@@ -711,8 +712,8 @@ Mann, A., Orban, A. and Arato, P. (2007) 'Finding optimal hardware/software part
 \bibitem[\protect\citeauthoryear{Trindade and Cordeiro}{2015}]{Trindade2015}
 Trindade, A. and Cordeiro, L. (2015) 'Applying SMT-based verification to hardware/software partitioning in embedded systems', {\it Design Automation for Embedded Systems (to appear)}
 
-\bibitem[\protect\citeauthoryear{Trindade \textit{et al.}}{2016}]{Trindade2016}
-Trindade, A., Ismail, H. and Cordeiro, L. (2016) 'Applying Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)', {\it V Brazilian Symposium on Computing Systems Engineering (to appear)}
+\bibitem[\protect\citeauthoryear{Trindade \textit{et al.}}{2015}]{Trindade2016}
+Trindade, A., Ismail, H. and Cordeiro, L. (2015) 'Applying Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)', {\it V Brazilian Symposium on Computing Systems Engineering (to appear)}
 
 \bibitem[\protect\citeauthoryear{Bjorner \textit{et al.}}{2015}]{Bjorner2015}
 Bjorner, N., Phan, A. and Fleckenstein, L. (2015) 'vZ - An Optimizing SMT Solver', {\it Proceedings of the International Conference on Tools and Algorithms for the Construction and Analysis of Systems}, Vol. 9035, pp.194--199
