[A-6] In page 5, "Based on ..., (?) is called ..." (please, re-write the sentence).

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -331,7 +331,7 @@ and the software cost of $P$ ({\it i.e.}, software cost of the nodes and the com
 \end{align}
 
 \vspace{2 mm}
-Different optimization (and decision) problems can be defined, \cite{Arato2003}. In this paper, the focus is on systems with hard real-time constraints: $ S_0 $ is given (initial cost of software), {\it i.e.}, the goal is to find a $P$ HW-SW partitioning so that $ S_p \leq S_0 $ and $ H_p $ is minimal, which is thus related . Based on Eq.~\ref{linear-programming-problem} and~\ref{software-communication-costs}, the constraints can be reformulated as 
+Different optimization (and decision) problems can be defined, \cite{Arato2003}. In this paper, the focus is on systems with hard real-time constraints: $ S_0 $ is given (initial cost of software), {\it i.e.}, the goal is to find a $P$ HW-SW partitioning so that $ S_p \leq S_0 $ and $ H_p $ is minimal, which is thus related . Based on Equations~\eqref{linear-programming-problem} and~\eqref{software-communication-costs}, the constraints can be reformulated as 
 
 \vspace{-2 mm}
 \begin{align}
