[A-8] In eq. 4, what is "E" ? does "x" represent a vector or a single number? what is "s"? what is "c"? (please, explain the variables, parameters, operators, etc. of the eq.).

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -340,7 +340,7 @@ s\left(1-x\right) + c|Ex| \leq S_0,
 \end{align}
 
 \vspace{2 mm}
-\noindent where $s$ and $c$ are the vectors representing the cost functions, $E$ is the transposed incidence matrix of $G$ (indicating which edges cross the boundary between the contexts of hardware and software), and $x$ represents the decision variable (a binary vector indicating the partition: 1 if the node is realized in hardware and 0 if node is realized in software). Concerning the complexity of this problem, \cite{Arato2003} demonstrate that it is NP-Hard, as defined in~\cite{Cormem}.
+\noindent where $s$ and $c$ are the vectors representing the cost functions, $E$ is the transposed incidence matrix of $G$ (indicating which edges cross the boundary between the contexts of hardware and software), and $x$ represents the decision variable (a binary vector indicating the partition: $1$ if the node is realized in hardware and $0$ if the node is realized in software). Concerning the complexity of this problem, \cite{Arato2003} demonstrate that it is NP-Hard, as defined in~\cite{Cormem}.
 
 %----------------------------------------------
 \section{Analysis of the partitioning problem}
